--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-# elm-package generated files
-elm-stuff
-# elm-repl generated files
-repl-temp-*
+# elm-package
+**/elm-stuff
+
+# elm-repl
+**/repl-temp-*
+
+# workspace
+**/*.sublime-project
+**/*.sublime-workspace
